# poolshark-fuel-indexer

./: Cargo.toml  README.md  manifest.yaml
contracts/: concentrated_liquidity.json
schema/: concentrated_liquidity.graphql
src/: pool.rs
